cluster/services/homer/route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: homer
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`${DOMAIN}`)
      services:
        - kind: Service
          name: homer
          namespace: homer
          port: 8080
      middlewares:
        - name: auth
          namespace: traefik
        - name: security
          namespace: traefik
  tls:
    secretName: ${DOMAIN}
